fixing python showing no output;

--- a/python-fan-pwm.service
+++ b/python-fan-pwm.service
@@ -3,7 +3,7 @@ Description=Regulates
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python3 /opt/pwm.py
+ExecStart=/usr/bin/python3 -u /opt/pwm.py
 
 [Install]
 WantedBy=multi-user.target
